<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notebook_paper_tanned_out_texture"
    tools:context=".BigNotebookActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="421dp"
        android:layout_height="434dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.239"
        app:srcCompat="@drawable/daco_4141788" />

    <Button
        android:id="@+id/button6"
        android:layout_width="317dp"
        android:layout_height="72dp"
        android:backgroundTint="#10000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/monthly_income_plan"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.062"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button5"
        android:layout_width="317dp"
        android:layout_height="72dp"
        android:backgroundTint="#10000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:text="@string/savings"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button4"
        android:layout_width="317dp"
        android:layout_height="72dp"
        android:backgroundTint="#10000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:onClick="goTo_ExpensesActivity"
        android:text="@string/expenses"
        android:textColor="#404040"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.22"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button3"
        android:layout_width="317dp"
        android:layout_height="72dp"
        android:backgroundTint="#10000000"
        android:fontFamily="@font/bowlby_one_sc"
        android:onClick="goTo_SmallNotebookActivity"
        android:text="Small notebook"
        android:textColor="#404040"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.875"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="512dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/daco_4141788" />

</androidx.constraintlayout.widget.ConstraintLayout>